syntax = "proto3";

package auth.v1;

option go_package = "SafeDeal/proto/auth/v1";

service AuthService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  uint32 user_id = 2;
  int64 expires_at = 3;
}